# anemoi-plugins

./: .gitignore  .release-please-config.json  CHANGELOG.md  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: downstream-ci-hpc.yml  readthedocs-pr-update.yml
docs/: conf.py  index.rst
docs/cli/: new.rst
docs/examples/datasets-create-source-basic-source/: pyproject.toml
docs/examples/datasets-create-source-xarray-source/: pyproject.toml
docs/examples/datasets-create-source-xarray-source/xarray_source/: example.py
docs/guide/: anatomy-of-a-plugin.rst
plugins/inference/inputs/example/: pyproject.toml
plugins/inference/inputs/example/anemoi_inference_input_example_plugin/: example.py
plugins/inference/inputs/example/tests/: test_plugin.py
plugins/transform/filters/filter1/: pyproject.toml
plugins/transform/filters/filter1/anemoi_plugins_transform_filters_filter1/: filter.py
plugins/transform/filters/filter2/: pyproject.toml
plugins/transform/filters/filter2/anemoi_plugins_transform_filters_filter2/: filter.py
src/anemoi/plugins/: __init__.py  __main__.py
src/anemoi/plugins/commands/: __init__.py  create.py  new.py
src/anemoi/plugins/data/: __init__.py
src/anemoi/plugins/data/common/: pyproject.toml.mako
src/anemoi/plugins/data/common/tests/: test_plugin.py.mako
src/anemoi/plugins/data/templates/datasets/create.filter/: plugin.py.mako
src/anemoi/plugins/data/templates/datasets/create.source/: grib-plugin.py.mako  plugin.py.mako  xarray-plugin.py.mako
src/anemoi/plugins/data/templates/inference/input/: plugin.py.mako
src/anemoi/plugins/data/templates/inference/output/: plugin.py.mako
src/anemoi/plugins/data/templates/transform/filter/: matching-plugin.py.mako  plugin.py.mako
tools/: make-plugin.py  make-plugin.sh
tools/plugins/PACKAGE/KINDS/example/: README.md  pyproject.toml
tools/plugins/PACKAGE/KINDS/example/anemoi_PACKAGE_KIND_example_plugin/: example.py  example_datasets_source.py
tools/plugins/PACKAGE/KINDS/example/tests/: test_plugin.py
transform/filters/filter1/: pyproject.toml
transform/filters/filter1/anemoi_plugins_transform_filters_filter1/: filter.py
transform/filters/filter2/: pyproject.toml
transform/filters/filter2/anemoi_plugins_transform_filters_filter2/: filter.py
