[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61" ]

[project]
name = "anemoi-PACKAGE-KIND-example-plugin"
version = "0.1.0"
description = "A KIND plugin for anemoi.PACKAGE"
readme = { text = "Filter plugin to do something", content-type = "text/markdown" }
keywords = [ "meteorology" ]
license = { text = "Apache License Version 2.0" }
authors = [
  { name = "John Doe", email = "author@example.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

urls.Homepage = "https://github.com/ecmwf/anemoi-plugins"
entry-points."anemoi.PACKAGE.EXTRAKINDs".example = "anemoi_PACKAGE_KIND_example_plugin.example:ExamplePlugin"

[tool.setuptools]
packages = [ "anemoi_PACKAGE_KIND_example_plugin" ]
zip-safe = true
include-package-data = true
